[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.VTFamilyCourtInfoSheet"
version = "1.3"
description = "Family court information sheet for Vermont"
readme = "README.md"
authors = [
    { name = "VTCourtForms by Legal Services Vermont", email = "ksurette@legalservicesvt.org" },
]
dependencies = [
    "docassemble.ALToolbox @ git+https://github.com/SuffolkLITLab/docassemble-ALToolbox.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
    "docassemble.VTSharedYMLFile @ git+https://github.com/LSVermont/docassemble-VTSharedYMLFile.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://vtlawhelp.org/vtcourtforms"

[tool.setuptools.packages.find]
where = [
    ".",
]
